[Doc] 3.5 Upgrade Notes for JAVA_OPTS with UDF (#61208)